Fix accidental scrolling issues on Mobile Safari

--- a/assets/app.raw.css
+++ b/assets/app.raw.css
@@ -1,5 +1,6 @@
 html, body {
   background-color: #000;
+  overflow: hidden;
 }
 body, button, input, textarea, select {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -123,7 +124,7 @@ header:hover + #info {
   appearance: slider-vertical;
 }
 #countries {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
